<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NuevoViajeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:text="Creando un Viaje"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/nombre_viaje"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etNombreViaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/ingrese_viaje"
            android:padding="12dp" />

        <TextView
            android:id="@+id/tvDates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/fecha_del_viaje"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFechaInicio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha_inicio"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/btnFechaFin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/fecha_fin"
                android:textAllCaps="true" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/presupuesto"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/sbPresupuesto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:max="1000" />

        <TextView
            android:id="@+id/tvPresupuesto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$0" />

        <CheckBox
            android:id="@+id/cbAlojamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/alojamiento_reservado" />

        <CheckBox
            android:id="@+id/cbTransporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/transporte_incluido" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tipo_de_viaje"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rgTipoViaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbTurismo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turismo" />

            <RadioButton
                android:id="@+id/rbNegocios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/negocios" />

            <RadioButton
                android:id="@+id/rbAventura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/aventura" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etDestino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Ingrese el destino"
                android:padding="12dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnGuardarViaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar_viaje"
            android:textAllCaps="true" />

    </LinearLayout>
</ScrollView>