<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTituloPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mi_perfil"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivFotoPerfil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nombre"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/tu_nombre"
            android:paddingStart="8dp" />

        <TextView
            android:id="@+id/tvContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contrasena"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/contrasenad"
            android:inputType="textPassword"
            android:paddingStart="8dp" />

        <Button
            android:id="@+id/btnGuardarPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/guardar_cambios" />

        <Button
            android:id="@+id/btnAgregarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/agregar_usuario" />

        <Button
            android:id="@+id/btnEliminarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/eliminar_usuario" />

        <fragment
            android:id="@+id/mapFragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</ScrollView>
